Add shopping cart functionality and user login
This commit introduces a number of changes designed to set up an online shopping functionality as well as a user login.

The bulk of these changes involve the client-side JavaScript, HTML, and CSS for handling product lists, shopping cart management, and user login process (username/password). The JS includes functions to handle product list display, adding/removing items to/from the shopping cart, and updating both the user interface and total price in response to changes.

The HTML has been fleshed out with additional elements relating to the product list and shopping cart and incorporates the new js and css files.

CSS has been added to style these new features and ensure they align well with the overall layout of the site. User-experience has been a major consideration in these updates, so there have also been changes made to improve display on smaller screens.

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,69 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Store</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home - Store</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/index.css">
+    <style>
+
+    </style>
 </head>
 <body>
+<div id="header">
+    <div>
+        <h1>Logo</h1>
+    </div>
 
+    <div id="header-center">
+        <h3>Welcome, <span>Daniel</span></h3>
+    </div>
+
+    <div>
+        <button id="submit">Logout</button>
+    </div>
+</div>
+
+<hr>
+
+<h4>Product List</h4>
+<table>
+    <thead>
+    <tr>
+        <td>Name</td>
+        <td>Price</td>
+        <td>Sock</td>
+        <td>Actions</td>
+    </tr>
+    </thead>
+    <tbody id="product-list-tbody">
+    </tbody>
+</table>
+
+<h4>Your Shopping Cart</h4>
+<h5 id="empty-shopping-cart">There is no items in your shopping cart !</h5>
+
+<div id="shopping-cart">
+    <table>
+        <thead>
+        <tr>
+            <td>Name</td>
+            <td>Price</td>
+            <td>Total</td>
+            <td>Quantity</td>
+        </tr>
+        </thead>
+        <tbody id="shopping-cart-tbody">
+        </tbody>
+    </table>
+
+    <div id="place-order-div">
+        <button id="place-order">Place order</button>
+    </div>
+</div>
+
+<script src="assets/scripts/index.js" type="text/javascript"></script>
 </body>
 </html>
