--- a/client/index.html
+++ b/client/index.html
@@ -19,11 +19,11 @@
     </div>
 
     <div id="header-center">
-        <h3>Welcome, <span>Daniel</span></h3>
+        <h3>Welcome, <span id="username-span">Daniel</span></h3>
     </div>
 
     <div>
-        <button id="submit">Logout</button>
+        <button id="logout" onclick="logout()">Logout</button>
     </div>
 </div>
 
