--- a/client/login.html
+++ b/client/login.html
@@ -22,7 +22,7 @@
     </div>
 
     <div>
-        <button id="submit">Login</button>
+        <button id="submit" onclick="login()">Login</button>
     </div>
 </div>
 
