Update login UI and API integration
Updated the login functionality to wrap the elements in an HTML form to improve accessibility and utilize built-in form functionalities. Client-side form validation has also been added. The login attempt is now triggered on form submission instead of clicking a button, which is a more robust approach and prevents potential issues with JavaScript being disabled. The Javascript 'login' method has been refactored to handle form submission event with preventing the default form submission behaviour. This way, the login process only proceeds after client-side validation is passsed. Improved error display to the user by updating the 'err' element to show message returned by API if response is not success.

Some minor code cleanup is also done in index.js and CSS style of error message is added in login.css.

--- a/client/login.html
+++ b/client/login.html
@@ -15,15 +15,22 @@
         <h1>Logo</h1>
     </div>
 
-    <div id="header-center">
-        <div class="form-group"><label for="username">Username</label> <input id="username"/></div>
-        <div class="form-group"><label for="password">Password</label> <input id="password"/></div>
-        <div id="err"></div>
-    </div>
+    <form action="" id="form">
+        <div id="header-center">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input id="username" type="text" required/>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input id="password" type="password" required/></div>
+            <div id="err"></div>
+        </div>
 
-    <div>
-        <button id="submit" onclick="login()">Login</button>
-    </div>
+        <div>
+            <button id="submit">Login</button>
+        </div>
+    </form>
 </div>
 
 <hr>
