Add order placement feature and logout redirect
Enhanced the application with the ability to place orders. New methods 'placeOrder' and 'checkJwt' were added to productsController and userController, respectively. The 'placeOrder' method checks if an authorized user has enough stock for their requested product quantity and adjusts the stock accordingly. The 'checkJwt' method verifies user's jwt token validity before any operation is carried out. This ensures only authorized and authenticated users can access and modify products.

Also added a redirect in 'index.js' to navigate the user back to the login page if no active user is found in the session storage. This serves as a basic protection against unauthorized access to the application when the user is not logged in.

Changes are also merged into 'index.css' to style new components and HTML elements used for order placement, and error/success messages displays.

File 'server/routes/index.js' is renamed to 'server/routes/products.js' and routes in 'server/app.js' are updated accordingly, for a more semantically meaningful structure.

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div id="header-center">
-        <h3>Welcome, <span id="username-span">Daniel</span></h3>
+        <h3>Welcome, <span id="username-span"></span></h3>
     </div>
 
     <div>
@@ -44,6 +44,7 @@
 </table>
 
 <h4>Your Shopping Cart</h4>
+<h3 id="success-place-order">You successfully place your order !</h3>
 <h5 id="empty-shopping-cart">There is no items in your shopping cart !</h5>
 
 <div id="shopping-cart">
@@ -60,8 +61,10 @@
         </tbody>
     </table>
 
+    <h3 id="error"></h3>
+
     <div id="place-order-div">
-        <button id="place-order">Place order</button>
+        <button id="place-order" onclick="placeOrder()">Place order</button>
     </div>
 </div>
 
